- Add "DELETE" command to delete a schedule.
- Modify behavior of "GET CWPCONFIG" command and "SET CWPCONFIG" command on Linux.
- Modify behavior of outputting error messages for invalid parameters when using "GET CWPCONFIG", "GET SERVERCONFIG", "SET CWPCONFIG" and "SET SERVERCONFIG" command.
- Change error code for unavailable commands when using "SET SERVERPREFS" command.
- Add an error message for the FileMaker error code 21.
- Built with Go 1.15.
- [BUG FIX] Fix compatibility with Claris FileMaker Server 19.1.2 when using "SET SERVERCONFIG" command and "SET SERVERPREFS" command.

Version: 1.1.0
Date: June 17, 2020
- Support "--savekey" option of "OPEN" command for FileMaker Server 19.
- Add the notarized installer for macOS to support macOS Catalina 10.15.
- Built with Go 1.14.

Version: 1.0.0
Date: September 26, 2019
- Support and require FileMaker Admin API v2 of FileMaker Server 18 and FileMaker Cloud for AWS 1.18. Released as a stable version.
- Change to the MIT License.
- Enable "--fqdn" option for FileMaker Server.
- Add "-f" and "--force" option for forcing database to close or database server to stop, immediately disconnecting clients.
- Add "GET BACKUPTIME" command to retrieve the start time of a specified backup schedule or the start times of all backup schedules for FileMaker Server (Handling schedule ID 1 is not supported).
- Add "GET SERVERPREFS" command for FileMaker Server.
- Add "SET SERVERPREFS" command for FileMaker Server.
- Add 32-bit version for Windows.
- [BUG FIX] Modify outputting enabled extended privileges of closed files when using "-s" option of "LIST FILES" command.

Version: 0.9.3 (beta)
Date: January 28, 2019
- Add an error message for the FileMaker error code 214.
- Built with Go 1.11.
- [BUG FIX] Fix "-m" and "--message" option of "CLOSE" command. The affected version is 0.9.2 only.